# wlroots

./: README.md  meson.build  meson_options.txt
backend/: backend.c  meson.build
backend/session/: meson.build
backend/wayland/: seat.c
include/types/: wlr_output.h
include/wlr/: config.h.in
include/wlr/render/: allocator.h
include/wlr/types/: wlr_output.h
render/allocator/: allocator.c  meson.build
types/output/: output.c  render.c
types/scene/: wlr_scene.c
